@@ -8,7 +8,7 @@
 // ####ECOSGPLCOPYRIGHTBEGIN####                                            
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2009 Free Software Foundation, Inc.
 //
 // eCos is free software; you can redistribute it and/or modify it under    
 // the terms of the GNU General Public License as published by the Free     
@@ -1066,9 +1066,12 @@ externC int pause( void )
 
     // Check for any pending signals that can be delivered and
     // if there are none, wait for a signal to be generated
-    while( !cyg_deliver_signals() )
+    if( !cyg_deliver_signals() )
         signal_sigwait.wait();
 
+    // Now check again for some signals to deliver
+    cyg_deliver_signals();
+    
     signal_mutex.unlock();
     
     SIGNAL_RETURN(EINTR);
